<resources>
    <string name="app_name">IM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_and_register_text">登录/注册</string>
    <string name="login_phone_text">手机号</string>
    <string name="login_password_text">密码</string>
    <string name="login_register_text">注册账号</string>
    <string name="login_forget_password_text">忘记密码?</string>
    <string name="login_quick_text">快速登录</string>
    <string name="login_qq_text">QQ登录</string>
    <string name="login_sina_text">微博登录</string>
    <string name="login_tencent_text">腾讯微博</string>
    <string name="login_login_text">登录</string>
    <string name="login_attention_register_text">注册</string>
</resources>
